worked on css for header

--- a/index.html
+++ b/index.html
@@ -9,21 +9,27 @@
 </head>
 <body>
 <header>
-  <img src="img/logo.png" alt="fork and knife logo">
-  <h1>Delicious</h1>
-  <p>The best food blog on the web.</p>
-  <ul>
-    <li><img src="img/fb-icon.png" alt="facebook logo"></li>
-    <li><img src="img/twit-icon.png" alt="twitter logo"></li>
-    <li><img src="img/gp-icon.png" alt="google plus logo"></li>
-    <li><img src="img/insta-icon.png" alt="instagram logo"></li>
-    <li><img src="img/flic-icon.png" alt="flickr logo"></li>
-    <li><img src="img/pint-icon.png" alt="pinterest logo"></li>
-  </ul>
-  <ul>
-    <li><img src="img/rss-icon.png" alt="rss logo"></li>
-    <li><img src="img/mail-icon.png" alt="email logo"></li>
-  </ul>
+  <section>
+    <img src="img/logo.png" alt="fork and knife logo">
+    <section>
+    <h1>Delicious</h1>
+    <p>The best food blog on the web.</p>
+    </section>
+  </section>
+  <section>
+    <ul>
+      <li><img src="img/fb-icon.png" alt="facebook logo"></li>
+      <li><img src="img/twit-icon.png" alt="twitter logo"></li>
+      <li><img src="img/gp-icon.png" alt="google plus logo"></li>
+      <li><img src="img/insta-icon.png" alt="instagram logo"></li>
+      <li><img src="img/flic-icon.png" alt="flickr logo"></li>
+      <li><img src="img/pint-icon.png" alt="pinterest logo"></li>
+    </ul>
+    <ul>
+      <li><img src="img/rss-icon.png" alt="rss logo"></li>
+      <li><img src="img/mail-icon.png" alt="email logo"></li>
+    </ul>
+  </section>
   <hr class="slashes">
 </header>
 <main>
