--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </section>
   </section>
   <section>
-    <ul>
+    <ul id="logos1">
       <li><img src="img/fb-icon.png" alt="facebook logo"></li>
       <li><img src="img/twit-icon.png" alt="twitter logo"></li>
       <li><img src="img/gp-icon.png" alt="google plus logo"></li>
@@ -25,7 +25,7 @@
       <li><img src="img/flic-icon.png" alt="flickr logo"></li>
       <li><img src="img/pint-icon.png" alt="pinterest logo"></li>
     </ul>
-    <ul>
+    <ul id="logos2">
       <li><img src="img/rss-icon.png" alt="rss logo"></li>
       <li><img src="img/mail-icon.png" alt="email logo"></li>
     </ul>
@@ -33,38 +33,38 @@
   <hr class="slashes">
 </header>
 <main>
-  <div>
+  <div id="titles">
     <h2>Chocolate Pizza</h2>
     <p>Posted on 15 Dec 2013 / Desserts</p>
     <a href=""><img src="img/print-icon.png" alt="print logo"> Print</a>
   </div>
-  <div>
+  <div id="imgAndP">
     <img src="img/choco-pizza.png" alt="chocolate pizza image">
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nemo, sunt veniam? Labore est a officia cumque, quod necessitatibus suscipit repellendus impedit magni sapiente error eos ipsum. Quisquam excepturi enim nostrum! 
+    <p>First element tetur adipisicing elit. Nemo, sunt veniam? Labore est a officia cumque, quod necessitatibus suscipit repellendus impedit magni sapiente error eos ipsum. Quisquam excepturi enim nostrum! 
     </p>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo esse delectus perferendis dolorum, aspernatur enim ducimus quam, magni ipsum sint quia fugit. Dolores adipisci, molestias aperiam asperiores exercitationem aspernatur consectetur?</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis, ipsam quae perspiciatis doloribus rem numquam suscipit voluptatum animi porro illo non ad vitae sequi impedit consectetur accusantium laboriosam dolorem dolores!</p>
+    <p id="p2">Second element met consectetur adipisicing elit. Nemo esse delectus perferendis dolorum, aspernatur enim ducimus quam, magni ipsum sint quia fugit. Dolores adipisci, molestias aperiam asperiores exercitationem aspernatur consectetur?</p>
+    <p>Third element consectetur adipisicing elit. Quis, ipsam quae perspiciatis doloribus rem numquam suscipit voluptatum animi porro illo non ad vitae sequi impedit consectetur accusantium laboriosam dolorem dolores!</p>
   </div>
-  <section>
+  <section id="recipeList">
     <ul>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
+      <li>1 1/2 cups milk</li>
+      <li>1/2 cup mascarpone</li>
+      <li>1/2 tsp pink salt</li>
+      <li>1 lb Black Mission Figs</li>
+      <li>1/2 cup brown sugar</li>
+      <li>2-4 tbsp water</li>
     </ul>
     <ul>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
+      <li>1 1/2 cups heavy cream</li>
+      <li>1/3 granulated sugar</li>
+      <li>2 egg yolks</li>
+      <li>1 lemon, juiced</li>
+      <li>2 tbsp butter</li>
+      <li>1 cup honey roasted, roughly chopped</li>
     </ul>
   </section>
-  <div>
-    <hr class="slashes">
+  <div id="author">
+    <hr id="lowerHr" class="slashes">
     <img src="img/van-pic.png" alt="picture of Vanessa Stevenson">
     <h3>Vanessa Stevenson</h3>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus ipsa in vel impedit, architecto provident temporibus quasi ea delectus eveniet.</p>
